align fixed

--- a/frontend/src/app/components/workspace/key/key.component.sass
+++ b/frontend/src/app/components/workspace/key/key.component.sass
@@ -37,4 +37,5 @@ div.mat-button-focus-overlay
   padding: 0
   min-width: 30px
   right: 0
+  z-index: 5000
 
